# claude-code-mux

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README-zh.md  README.md  config.example.toml  docker-compose.yml
.github/workflows/: docker-build.yml
docs/: OAUTH_SETUP.md  gemini-integration.md  localstorage-state-management.md  openai-compatibility.md  routing-e2e-evidence.md  think-routing.md  url-state-management.md
docs-zh/: OAUTH_SETUP.md  OAUTH_TESTING.md  SCREENSHOT_GUIDE.md  design-principles.md  gemini-integration.md  localstorage-state-management.md  openai-compatibility.md  url-state-management.md
docs/archive/: OAUTH_IMPLEMENTATION_COMPLETE.md  PROMPT_CACHING_FIX.md  oauth_summary.md
examples/: oauth_login.rs
plans/: headers-passthrough.md  hot-reload.md  p0-routing-strategy.md  p2-fallback-retry.md  p3-capability-routing.md  p4-protocol-convert.md  p5-web-refactor.md  p6-memory-logs.md
scripts/: git-push.sh
src/: lib.rs  main.rs  pid.rs
src/auth/: middleware.rs  mod.rs  oauth.rs  token_store.rs
src/cli/: mod.rs
src/headers/: mod.rs
src/message_tracing/: mod.rs
src/models/: mod.rs
src/providers/: anthropic_compatible.rs  gemini.rs  mod.rs  openai.rs  registry.rs  streaming.rs
src/router/: mod.rs
src/server/: admin.html  i18n.rs  logs.rs  mod.rs  oauth_handlers.rs  openai_compat.rs
src/server/i18n/: en.json  zh-CN.json
