[package]
name = "claude-code-mux"
version = "0.6.3-eli.1"
edition = "2021"
license = "MIT"
description = "High-performance, intelligent Claude Code router built in Rust"
repository = "https://github.com/9j/claude-code-mux"
keywords = ["claude", "code", "router", "llm", "ai"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "ccm"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util", "sync"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls", "native-tls-vendored"] }
bytes = "1"
pin-project = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Configuration
config = "0.14"
toml = "0.8"

# Token Counting
tiktoken-rs = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1"
thiserror = "1"

# Utilities
dashmap = "5"              # Concurrent HashMap
once_cell = "1"            # Lazy statics
async-trait = "0.1"        # Async trait support
dirs = "5"                 # User directories
regex = "1"                # Regular expressions
uuid = { version = "1.0", features = ["v4", "serde"] }  # UUID generation for streaming

# OAuth & Auth
oauth2 = "4"               # OAuth 2.0 client
base64 = "0.22"            # Base64 encoding
sha2 = "0.10"              # SHA-256 for PKCE
rand = "0.8"               # Random generation for PKCE
chrono = { version = "0.4", features = ["serde"] }  # Timestamps
url = "2"                  # URL parsing
secrecy = "0.8"            # Secure secret handling

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }  # Unix signals

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1"
criterion = "0.5"          # Benchmarking
tempfile = "3"             # Temporary directory testing

# Property Testing
proptest = "1"

[[bench]]
name = "routing"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
